Bug fixes & add'l functionality for changing source layout
1. Squashed bugs discovered in testing
2. created disabled state on buttons instead of hiding them
3. Created functionality so that if source formatting matches the
sheet’s formatting, all classes on the source are removed (allowing for
buttons at the top to again control them)
4. Formatted modal & changed text to make less verbose.

--- a/static/css/sheets.css
+++ b/static/css/sheets.css
@@ -1229,3 +1229,16 @@ margin-top:10px;
 text-decoration: underline;
 cursor: pointer;
 }
+
+.disabled { 
+pointer-events: none;
+opacity: .3;
+}
+
+#overrideLayoutModal .ok {
+margin-top: 25px;
+}
+
+#overrideLayoutModal .header {
+margin: 15px 0px 25px;
+}
